Add tests for custom users

--- a/samples/IdentitySample.DefaultUI/IdentitySample.DefaultUI.csproj
+++ b/samples/IdentitySample.DefaultUI/IdentitySample.DefaultUI.csproj
@@ -32,4 +32,13 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="$(MicrosoftExtensionsLoggingDebugPackageVersion)" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Pages\About.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Pages\_ViewStart.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
