--- a/test/WebSites/Identity.DefaultUI.WebSite/Identity.DefaultUI.WebSite.csproj
+++ b/test/WebSites/Identity.DefaultUI.WebSite/Identity.DefaultUI.WebSite.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFrameworks>$(StandardTestWebsiteTfms)</TargetFrameworks>
@@ -7,13 +7,7 @@
 
   <ItemGroup>
     <Compile Include="..\..\InMemory.Test\InMemoryUserStore.cs" Link="Services\InMemoryUserStore.cs" />
-    <Compile Include="..\..\Shared\TestRole.cs" Link="Data\TestRole.cs" />
-    <Compile Include="..\..\Shared\TestRoleClaim.cs" Link="Data\TestRoleClaim.cs" />
-    <Compile Include="..\..\Shared\TestUser.cs" Link="Data\TestUser.cs" />
-    <Compile Include="..\..\Shared\TestUserClaim.cs" Link="Data\TestUserClaim.cs" />
-    <Compile Include="..\..\Shared\TestUserLogin.cs" Link="Data\TestUserLogin.cs" />
-    <Compile Include="..\..\Shared\TestUserRole.cs" Link="Data\TestUserRole.cs" />
-    <Compile Include="..\..\Shared\TestUserToken.cs" Link="Data\TestUserToken.cs" />
+    <Compile Include="..\..\Shared\Poco*.cs" Link="Data\%(FileName)%(Extension)" />
   </ItemGroup>
 
   <ItemGroup>
