Fix compilation errors introduced by backporting 2FA fixes

--- a/src/Microsoft.AspNetCore.Identity/project.json
+++ b/src/Microsoft.AspNetCore.Identity/project.json
@@ -26,10 +26,15 @@
     "Microsoft.AspNetCore.Hosting.Abstractions": "1.0.5"
   },
   "frameworks": {
-    "net451": {},
+    "net451": {
+      "frameworkAssemblies": {
+        "System.Configuration": ""
+      }
+    },
     "netstandard1.3": {
       "dependencies": {
-        "System.Text.RegularExpressions": "4.1.0"
+        "System.Text.RegularExpressions": "4.1.0",
+        "System.AppContext": "4.1.0"
       }
     }
   }
